# aare

./: .env.naide  .gitignore  README.md  bot.py  fetch_news.py  functions.py  gpt_functions.py  index_news.py  main.py  pyproject.toml  requirements.txt  responses.py  stock_data.py
