[tool.poetry]
name = "repl_nix_aare"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
discord = "^2.2.3"
html2markdown = "^0.1.7"
python-dotenv = "^1.0.0"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
